--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AAAIScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AAAIScraperUnitURLTest1.bib
@@ -6,5 +6,5 @@
 	keywords = {},
 	abstract = {In this paper, we describe the motivations for the organization of the SISoM-workshop on Social Innovation and Social Media, to be held in the context of the ICWSM 2011. We argue that social innovation and social media, two trends, that have started independently, are bound to increasingly overlap. Social innovators, as well as the growing number of public administrations fostering social innovation, regard social media as a potentially powerful communication and coordination tool. At the same time, it is argued that they will require functionalities and implement practices which differ from those prevalent in the most popular general purpose social media platforms. A theoretical framework and an initial set of research questions are proposed in order to address those matters, which are partially covered by the papers accepted as contributions to the workshop.},
 
-	url = {http://www.aaai.org/ocs/index.php/ICWSM/ICWSM11/paper/view/3856}
+	url = {https://www.aaai.org/ocs/index.php/ICWSM/ICWSM11/paper/view/3856}
 }
