fixed JCBScraper and updated test files

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/JCBScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/JCBScraperUnitURLTest1.bib
@@ -1,13 +1,15 @@
-@article{Doyle23022009,
-author = {Doyle, Andrew D. and Wang, Francis W. and Matsumoto, Kazue and Yamada, Kenneth M.}, 
-title = {One-dimensional topography underlies three-dimensional fibrillar cell migration},
-volume = {184}, 
-number = {4}, 
-pages = {481-490}, 
-year = {2009}, 
-doi = {10.1083/jcb.200810041}, 
-abstract ={Current concepts of cell migration were established in regular two-dimensional (2D) cell culture, but the roles of topography are poorly understood for cells migrating in an oriented 3D fibrillar extracellular matrix (ECM). We use a novel micropatterning technique termed microphotopatterning (μPP) to identify functions for 1D fibrillar patterns in 3D cell migration. In striking contrast to 2D, cell migration in both 1D and 3D is rapid, uniaxial, independent of ECM ligand density, and dependent on myosin II contractility and microtubules (MTs). 1D and 3D migration are also characterized by an anterior MT bundle with a posterior centrosome. We propose that cells migrate rapidly through 3D fibrillar matrices by a 1D migratory mechanism not mimicked by 2D matrices.}, 
-URL = {http://jcb.rupress.org/content/184/4/481.abstract}, 
-eprint = {http://jcb.rupress.org/content/184/4/481.full.pdf+html}, 
-journal = {The Journal of Cell Biology} 
+@article {Doyle481,
+	author = {Doyle, Andrew D. and Wang, Francis W. and Matsumoto, Kazue and Yamada, Kenneth M.},
+	title = {One-dimensional topography underlies three-dimensional fibrillar cell migration},
+	volume = {184},
+	number = {4},
+	pages = {481--490},
+	year = {2009},
+	doi = {10.1083/jcb.200810041},
+	publisher = {Rockefeller University Press},
+	abstract = {Current concepts of cell migration were established in regular two-dimensional (2D) cell culture, but the roles of topography are poorly understood for cells migrating in an oriented 3D fibrillar extracellular matrix (ECM). We use a novel micropatterning technique termed microphotopatterning (μPP) to identify functions for 1D fibrillar patterns in 3D cell migration. In striking contrast to 2D, cell migration in both 1D and 3D is rapid, uniaxial, independent of ECM ligand density, and dependent on myosin II contractility and microtubules (MTs). 1D and 3D migration are also characterized by an anterior MT bundle with a posterior centrosome. We propose that cells migrate rapidly through 3D fibrillar matrices by a 1D migratory mechanism not mimicked by 2D matrices.},
+	issn = {0021-9525},
+	URL = {http://jcb.rupress.org/content/184/4/481},
+	eprint = {http://jcb.rupress.org/content/184/4/481.full.pdf},
+	journal = {The Journal of Cell Biology}
 }
