fixed capitalisation of menu entries

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1255,10 +1255,10 @@ navi.password.ldap               = pin code
 navi.pdfs                        = documents
 navi.persons                     = genealogy
 navi.popular                     = popular
-navi.postBookmark                = Add bookmark
+navi.postBookmark                = add bookmark
 navi.postBookmarkPopup           = post bookmark (popup)
 navi.postPost                    = add post
-navi.postPublication             = Add publication
+navi.postPublication             = add publication
 navi.postPublicationPopup        = post publication (popup)
 navi.posts                       = posts
 navi.postsOfFriends              = posts of friends
@@ -1937,7 +1937,7 @@ publication.documents.rename.success    = Renamed document.
 publication.export.simple_bibtex.title  = show this publication in BibTeX format
 publication.export.simple_endnote.title = export this publication in Endnote format
 publication.export.title                = show this publication in {0} format
-publication.import.title                = Import publications
+publication.import.title                = import publications
 
 publications = publications
 
