--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ProjectmuseScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ProjectmuseScraperUnitURLTest2.bib
@@ -1,13 +1,14 @@
-@inproceedings{johnson2005,
-  title = {Temporal and Spatial Variation in Age-Specific Net Migration in the United States},
-  url = {https://muse.jhu.edu/article/190166},
-  journal = {Demography},
-  issn = {1533-7790},
-  volume = {42},
-  number = {4},
-  author = {Johnson, Kenneth M. -- (Kenneth Michael), -- and Voss, Paul R. and Hammer, Roger B. and Fuguitt, Glenn Victor, and McNiven, Scott.},
-  year = {2005},
-  pages = {791--812},
-  abstract = {
-As fertility differences in the United States diminish, population redistribution trends are increasingly dependent on migration. This research used newly developed county-level age-specific net migration estimates for the 1990s, supplemented with longitudinal age-specific migration data spanning the prior 40 years, to ascertain whether there are clear longitudinal trends in age-specific net migration and to determine if there is spatial clustering in the migration patterns. The analysis confirmed the continuation into the 1990s of distinct net migration "signature patterns" for most types of counties, although there was temporal variation in the overall volume of migration across the five decades. A spatial autocorrelation analysis revealed large, geographically contiguous regions of net in-migration (in particular, Florida and the Southwest) and geographically contiguous regions of net out-migration (the Great Plains, in particular) that persisted over time. Yet the patterns of spatial concentration and fragmentation over time in these migration data demonstrate the relevance of this "neighborhood" approach to understanding spatiotemporal change in migration.  },
+@article{johnson2005temporal,
+author = {Johnson, Kenneth M. (Kenneth Michael) and Voss, Paul R and Hammer, Roger B and Fuguitt, Glenn Victor and McNiven, Scott},
+comment = {Volume 42, Number 4, November 2005},
+issn = {15337790},
+journal = {Demography},
+number = {4},
+pages = {791--812},
+publisher = {Population Association of America},
+title = {Temporal and Spatial Variation in Age-Specific Net Migration in the United States},
+url = {https://muse.jhu.edu/article/190166},
+volume = {42},
+year = {2005}
+,abstract = {As fertility differences in the United States diminish, population redistribution trends are increasingly dependent on migration. This research used newly developed county-level age-specific net migration estimates for the 1990s, supplemented with longitudinal age-specific migration data spanning the prior 40 years, to ascertain whether there are clear longitudinal trends in age-specific net migration and to determine if there is spatial clustering in the migration patterns. The analysis confirmed the continuation into the 1990s of distinct net migration "signature patterns" for most types of counties, although there was temporal variation in the overall volume of migration across the five decades. A spatial autocorrelation analysis revealed large, geographically contiguous regions of net in-migration (in particular, Florida and the Southwest) and geographically contiguous regions of net out-migration (the Great Plains, in particular) that persisted over time. Yet the patterns of spatial concentration and fragmentation over time in these migration data demonstrate the relevance of this "neighborhood" approach to understanding spatiotemporal change in migration.}
 }
