updated PlosScraper test files

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/PlosScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/PlosScraperUnitURLTest2.bib
@@ -6,7 +6,7 @@
     year = {2010},
     month = {03},
     volume = {7},
-    url = {http://dx.doi.org/10.1371%2Fjournal.pmed.1000248},
+    url = {https://doi.org/10.1371/journal.pmed.1000248},
     pages = {1-13},
     abstract = {Majid Ezzati and colleagues examine the contribution of a set of risk factors (smoking, high blood pressure, elevated blood glucose, and adiposity) to socioeconomic disparities in life expectancy in the US population.},
     number = {3},
