--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/PlosScraperUnitURLTest5.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/PlosScraperUnitURLTest5.bib
@@ -6,7 +6,7 @@
     year = {2011},
     month = {09},
     volume = {7},
-    url = {http://dx.doi.org/10.1371%2Fjournal.pcbi.1002146},
+    url = {https://doi.org/10.1371/journal.pcbi.1002146},
     pages = {1-9},
     abstract = {Author Summary Chagas disease has become an urban problem in the city of Arequipa, Peru, yet there are very few people exhibiting severe symptoms of the disease. Severe symptoms often do not appear until decades after infection. To determine why so few people were exhibiting severe symptoms, we used a new method, epicenter regression, to trace the history of Chagas disease transmission in a community of Arequipa, Peru. Our findings suggest that transmission in Arequipa occurred through a series of small epidemics, the oldest of which began only around 20 years ago. These micro-epidemics infected nearly 5% of the community before the insect that carries Chagas disease, Triatoma infestans, was eliminated by insecticide application. Most human infections in the study community arose over a brief period of time immediately prior to the insecticide application. According to our findings, the severe symptoms of Chagas disease are expected to be absent from the community because of the short duration of infection with the parasite, even among older individuals with Chagas disease.},
     number = {9},
