--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/PlosScraperUnitURLTest3.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/PlosScraperUnitURLTest3.bib
@@ -6,7 +6,7 @@
     year = {2011},
     month = {09},
     volume = {9},
-    url = {http://dx.doi.org/10.1371%2Fjournal.pbio.1001148},
+    url = {https://doi.org/10.1371/journal.pbio.1001148},
     pages = {1-15},
     abstract = {A protein that is thought to orchestrate the distribution of other signaling molecules on the cell membrane, CD81, is critical to maintaining the functional integrity of hematopoietic stem cells during their regeneration.},
     number = {9},
