updated SpiresScraper test files

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/SpiresScraperUnitURLTest.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/SpiresScraperUnitURLTest.bib
@@ -5,7 +5,7 @@
                         ILC}",
       school         = "Hamburg U.",
       year           = "2007",
-      url            = "http://www-library.desy.de/cgi-bin/showprep.pl?thesis07-018",
+      url            = "http://inspirehep.net/record/754958/files/desy-thesis-07-018.pdf",
       doi            = "10.3204/DESY-THESIS-2007-018",
       reportNumber   = "DESY-THESIS-2007-018",
       SLACcitation   = "%%CITATION = DESY-THESIS-2007-018;%%"
