--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/SpringerLinkScraperUnitURLTest9.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/SpringerLinkScraperUnitURLTest9.bib
@@ -1,10 +1,10 @@
 @book{ricci2011recommender,
-address = {New York [etc.]},
-author = {Ricci, Francesco and Springer Science+Business Media},
+address = {New York; Dordrecht},
+author = {Ricci, Francesco},
 isbn = {9780387858197 0387858199 9780387858203 0387858202},
 publisher = {Springer},
-refid = {883539056},
-title = {Recommender Systems handbook},
+refid = {889566545},
+title = {Recommender systems handbook},
 year = {2011}
 ,url = {http://www.worldcat.org/search?qt=worldcat_org_all&q=9780387858203}
 }
