updated TheLancetScraper test files

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/TheLancetScraperUnitURLTest.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/TheLancetScraperUnitURLTest.bib
@@ -4,6 +4,7 @@ author = {Shannon, Kate and Strathdee, Steffanie A and Goldenberg, Shira M and D
 booktitle = {The Lancet},
 comment = {doi: 10.1016/S0140-6736(14)60931-4},
 doi = {10.1016/S0140-6736(14)60931-4},
+issn = {01406736},
 journal = {The Lancet},
 number = {9962},
 pages = {55--71},
