--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AipScitationScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AipScitationScraperUnitURLTest1.bib
@@ -1,13 +1,17 @@
-@article{:/content/aip/journal/jcp/136/3/10.1063/1.3680558,
-   author = "Schiff, Jeremy and Poirier, Bill",
-   title = "Communication: Quantum mechanics without wavefunctions",
-   journal = "The Journal of Chemical Physics",
-   year = "2012",
-   volume = "136",
-   number = "3", 
-   eid = 031102,
-   pages = "",
-   url = "http://scitation.aip.org/content/aip/journal/jcp/136/3/10.1063/1.3680558",
-   doi = "http://dx.doi.org/10.1063/1.3680558" 
+@article{schiff2012communication,
+author = {Schiff, Jeremy and Poirier, Bill},
+booktitle = {The Journal of Chemical Physics},
+comment = {doi: 10.1063/1.3680558},
+doi = {10.1063/1.3680558},
+issn = {00219606},
+journal = {The Journal of Chemical Physics},
+month = {jan},
+number = {3},
+pages = {031102--},
+publisher = {American Institute of Physics},
+title = {Communication: Quantum mechanics without wavefunctions},
+url = {http://dx.doi.org/10.1063/1.3680558},
+volume = {136},
+year = {2012}
 ,abstract = {We present a self-contained formulation of spin-free non-relativistic quantum mechanics that makes no use of wavefunctions or complex amplitudes of any kind. Quantum states are represented as ensembles of real-valued quantum trajectories, obtained by extremizing an action and satisfying energy conservation. The theory applies for arbitrary configuration spaces and system dimensionalities. Various beneficial ramifications—theoretical, computational, and interpretational—are discussed.}
 }
