fixes #2780 and cleans up test data

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/SpringerLinkScraperUnitURLTest5.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/SpringerLinkScraperUnitURLTest5.bib
@@ -1,17 +1,15 @@
-@Article{Benz2010,
-author="Benz, Dominik
-and Hotho, Andreas
-and J{\"a}schke, Robert
-and Krause, Beate
-and Stumme, Gerd",
-title="Query Logs as Folksonomies",
-journal="Datenbank-Spektrum",
-year="2010",
-volume="10",
-number="1",
-pages="15--24",
-abstract="Query logs provide a valuable resource for preference information in search. A user clicking on a specific resource after submitting a query indicates that the resource has some relevance with respect to the query. To leverage the information of query logs, one can relate submitted queries from specific users to their clicked resources and build a tripartite graph of users, resources and queries. This graph resembles the folksonomy structure of social bookmarking systems, where users add tags to resources. In this article, we summarize our work on building folksonomies from query log files. The focus is on three comparative studies of the system's content, structure and semantics. Our results show that query logs incorporate typical folksonomy properties and that approaches to leverage the inherent semantics of folksonomies can be applied to query logs as well.",
-issn="1610-1995",
-doi="10.1007/s13222-010-0004-8",
-url="http://dx.doi.org/10.1007/s13222-010-0004-8"
+@Inbook{Göker2000,
+author="G{\"o}ker, Mehmet H.
+and Thompson, Cynthia A.",
+editor="Blanzieri, Enrico
+and Portinale, Luigi",
+title="Personalized Conversational Case-Based Recommendation",
+bookTitle="Advances in Case-Based Reasoning: 5th European Workshop, EWCBR 2000 Trento, Italy, September 6--9, 2000 Proceedings",
+year="2000",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="99--111",
+isbn="978-3-540-44527-2",
+doi="10.1007/3-540-44527-7_10",
+url="http://dx.doi.org/10.1007/3-540-44527-7_10"
 }
