updated IWAPonlineScraper and test files

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IWAPonlineScraperUnitURLTest.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IWAPonlineScraperUnitURLTest.bib
@@ -1,12 +1,14 @@
-@article{iwap2003,
-year = {2003},
-publisher = {IWA Publishing},
-url = {http://www.iwaponline.com/jwh/001/jwh0010101.htm},
-volume = {01},
-pages = {101 - 108},
-misc = {language = {en}},
-title = {The effect of container-biofilm on the microbiological quality of water used from plastic household containers.},
-author = {Jagals P and Jagals C and Bokako T},
-keywords = {biofilm Clostridium perfringens E. coli total coliforms turbidity water-storage containers}
-,abstract = {Studies in Southern Africa have shown that even when microbiologically safe water is supplied to developing communities at communal standpipes, contamination by high numbers of pathogenic microorganisms may occur during the processes of fetching water from the supply source and storage during use at home, rendering such waters unsafe for human consumption. This study investigated the occurrence of biofilm in PVC storage containers as one possible reason for this deterioration, using heterotrophic bacteria and total coliform counts as well as turbidity as indicators. A second objective was to determine whether biofilm in water-storage containers could contribute to hazardous microbiological contamination indicated by <I>Escherichia coli</I> and <I>Clostridium perfringens</I>. Results indicated that increased microbiological contamination is associated with biofilm. The biofilm harbours heterotrophic bacteria, total coliforms and <I>C. perfringens</I>. <I>E. coli</I> could not be associated directly with the levels of biofilm in containers but rather appears to be introduced intermittently from the ambient domestic environment. When dislodged with the biofilm, these bacteria contributed substantially to the deterioration of the microbiological quality of supplied water stored in plastic containers.}
+@article {Jagals101,
+	author = {Jagals, P. and Jagals, C. and Bokako, T. C.},
+	title = {The effect of container-biofilm on the microbiological quality of water used from plastic household containers},
+	volume = {1},
+	number = {3},
+	pages = {101--108},
+	year = {2003},
+	publisher = {IWA Publishing},
+	abstract = {Studies in Southern Africa have shown that even when microbiologically safe water is supplied to developing communities at communal standpipes, contamination by high numbers of pathogenic microorganisms may occur during the processes of fetching water from the supply source and storage during use at home, rendering such waters unsafe for human consumption. This study investigated the occurrence of biofilm in PVC storage containers as one possible reason for this deterioration, using heterotrophic bacteria and total coliform counts as well as turbidity as indicators. A second objective was to determine whether biofilm in water-storage containers could contribute to hazardous microbiological contamination indicated by Escherichia coli and Clostridium perfringens. Results indicated that increased microbiological contamination is associated with biofilm. The biofilm harbours heterotrophic bacteria, total coliforms and C. perfringens. E. coli could not be associated directly with the levels of biofilm in containers but rather appears to be introduced intermittently from the ambient domestic environment. When dislodged with the biofilm, these bacteria contributed substantially to the deterioration of the microbiological quality of supplied water stored in plastic containers.},
+	issn = {1477-8920},
+	URL = {http://jwh.iwaponline.com/content/1/3/101},
+	eprint = {http://jwh.iwaponline.com/content/1/3/101.full.pdf},
+	journal = {Journal of Water and Health}
 }
