updated CambridgeScraper and test files

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/CambridgeScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/CambridgeScraperUnitURLTest1.bib
@@ -1,14 +1,14 @@
-@article{CCC:1805072,
-author = {Treitel,Corinna},
+@article{treitel2008rubner,
+abstract = {Eager to move on after the divisive Sonderweg debates of the 1980s, historians of modern Germany have been busily elaborating a new central narrative around the notion of biopolitics. Aimed at producing a more powerful and productive society by regulating, optimizing, and even exterminating specific human populations, biopolitics has encompassed everything from housing reform, anti-smoking campaigns, and child vaccination programs to pro- and anti-natalist tax policies, national census taking, and the science of industrial hygiene. Identified by Michel Foucault and others as a general feature of all Western modernities, biopolitics has been a particularly fruitful concept for German historians, who have used it to trace the evolution of racial hygiene—the Nazi variant of eugenics and Germany's most infamous application of biopolitical principles—from a politically diverse group of Wilhelmine and Weimar social reformers. The very normality of these reformers, given the international context, has in turn allowed scholars to avoid labeling German modernity as deviant while at the same time framing the murderous dynamic of the Nazi years as a potential latent in modernity more generally. As Edward Ross Dickinson put it in an excellent review article recently, Germany has emerged from this reevaluation “not as a nation having trouble modernizing, but as a nation of troubling modernity.”},
+author = {Treitel, Corinna},
+booktitle = {Central European History},
+doi = {DOI: 10.1017/S0008938908000022},
+issn = {00089389},
+number = {1},
+pages = {1-25--},
+publisher = {Cambridge University Press},
 title = {Max Rubner and the Biopolitics of Rational Nutrition},
-journal = {Central European History},
+url = {https://www.cambridge.org/core/article/max-rubner-and-the-biopolitics-of-rational-nutrition/8A076B9FF653BF6A34C870B7718AFAD5},
 volume = {41},
-issue = {01},
-month = {3},
-year = {2008},
-issn = {1569-1616},
-pages = {1--25},
-numpages = {25},
-doi = {10.1017/S0008938908000022},
-URL = {http://journals.cambridge.org/article_S0008938908000022},
+year = {2008}
 }
