--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/CambridgeScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/CambridgeScraperUnitURLTest2.bib
@@ -1,13 +1,13 @@
-@article{FLM:402142,
-author = {Cancelli,Claudio and Pedley,T. J.},
+@article{cancelli1985separatedflow,
+abstract = {A new model is presented to describe flow in segments of collapsible tube mounted between two rigid tubes and surrounded by a pressurized container. The new features of the model are the inclusion of (a) longitudinal wall tension and (b) energy loss in the separated flow downstream of the time-dependent constriction in a collapsing tube, in a manner which is consistent with the one-dimensional equations of motion. As well as accurately simulating steady-state collapse, the model predicts self-excited oscillations whose amplitude is large enough to be observable only if the flow in the collapsible tube becomes supercritical somewhere (fluid speed exceeding long-wave propagation speed). The dynamics of the oscillations is dominated by longitudinal movement of the point of flow separation, in response to the adverse pressure gradient associated with waves propagating backwards and forwards between the (moving) narrowest point of the constriction and the tube outlet.},
+author = {Cancelli, Claudio and Pedley, T. J.},
+booktitle = {Journal of Fluid Mechanics},
+doi = {DOI: 10.1017/S0022112085002427},
+issn = {00221120},
+pages = {375-404--},
+publisher = {Cambridge University Press},
 title = {A separated-flow model for collapsible-tube oscillations},
-journal = {Journal of Fluid Mechanics},
+url = {https://www.cambridge.org/core/article/separatedflow-model-for-collapsibletube-oscillations/F8B8F4ABDC08F5B156B6C574F9DF4C01},
 volume = {157},
-month = {8},
-year = {1985},
-issn = {1469-7645},
-pages = {375--404},
-numpages = {30},
-doi = {10.1017/S0022112085002427},
-URL = {http://journals.cambridge.org/article_S0022112085002427},
+year = {1985}
 }
