fixed CSHLPScraper and updated test files

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/CSHLPScraperUnitURLTest4.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/CSHLPScraperUnitURLTest4.bib
@@ -1,13 +1,15 @@
-@article{Samarghitean01122009,
-author = {Samarghitean, Crina and Ortutay, Csaba and Vihinen, Mauno}, 
-title = {Systematic Classification of Primary Immunodeficiencies Based on Clinical, Pathological, and Laboratory Parameters},
-volume = {183}, 
-number = {11}, 
-pages = {7569-7575}, 
-year = {2009}, 
-doi = {10.4049/jimmunol.0901837}, 
-abstract ={The classification of diseases has several important applications ranging from diagnosis and choice of treatment to demographics. To date, classifications have been successfully created manually, often within international consortia. Some groups of diseases, such as primary immunodeficiencies (PIDs), are especially hard to nosologically cluster due, on one hand, to the presence of a wide variety of disorders and, in contrast, because of overlapping characteristics. More than 200 PIDs affecting components of the innate and adaptive immune systems have been described. Clinical, pathological, and laboratory characteristics were collected and used to group PIDs. A consensus of at least five independent methods provided a novel classification of 11 groups, which revealed previously unknown features and relationships of PIDs. Comparison of the classification to independent features, including the severity and therapy of the diseases, functional classification of proteins, and network vulnerability, indicated a strong statistical support. The method can be applied to any group of diseases.}, 
-URL = {http://www.jimmunol.org/content/183/11/7569.abstract}, 
-eprint = {http://www.jimmunol.org/content/183/11/7569.full.pdf+html}, 
-journal = {The Journal of Immunology} 
+@article {Samarghitean7569,
+	author = {Samarghitean, Crina and Ortutay, Csaba and Vihinen, Mauno},
+	title = {Systematic Classification of Primary Immunodeficiencies Based on Clinical, Pathological, and Laboratory Parameters},
+	volume = {183},
+	number = {11},
+	pages = {7569--7575},
+	year = {2009},
+	doi = {10.4049/jimmunol.0901837},
+	publisher = {American Association of Immunologists},
+	abstract = {The classification of diseases has several important applications ranging from diagnosis and choice of treatment to demographics. To date, classifications have been successfully created manually, often within international consortia. Some groups of diseases, such as primary immunodeficiencies (PIDs), are especially hard to nosologically cluster due, on one hand, to the presence of a wide variety of disorders and, in contrast, because of overlapping characteristics. More than 200 PIDs affecting components of the innate and adaptive immune systems have been described. Clinical, pathological, and laboratory characteristics were collected and used to group PIDs. A consensus of at least five independent methods provided a novel classification of 11 groups, which revealed previously unknown features and relationships of PIDs. Comparison of the classification to independent features, including the severity and therapy of the diseases, functional classification of proteins, and network vulnerability, indicated a strong statistical support. The method can be applied to any group of diseases.},
+	issn = {0022-1767},
+	URL = {http://www.jimmunol.org/content/183/11/7569},
+	eprint = {http://www.jimmunol.org/content/183/11/7569.full.pdf},
+	journal = {The Journal of Immunology}
 }
