--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/BMJOpenScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/BMJOpenScraperUnitURLTest1.bib
@@ -1,12 +1,14 @@
-@article{Low01012013,
-  abstract = {Objectives To determine whether humour therapy reduces depression (primary outcome), agitation and behavioural disturbances and improves social engagement and quality-of-life in nursing home residents.Design The Sydney Multisite Intervention of LaughterBosses and ElderClowns study was a single-blind cluster randomised controlled trial of humour therapy.Setting 35 Sydney nursing homes.Participants All eligible residents within geographically defined areas within each nursing home were invited to participate.Intervention Professional ‘ElderClowns’ provided 9–12 weekly humour therapy sessions, augmented by resident engagement by trained staff ‘LaughterBosses’. Controls received usual care.Measurements Depression scores on the Cornell Scale for Depression in Dementia, agitation scores on the Cohen-Mansfield Agitation Inventory, behavioural disturbance scores on the Neuropsychiatric Inventory, social engagement scores on the withdrawal subscale of Multidimensional Observation Scale for Elderly Subjects, and self-rated and proxy-rated quality-of-life scores on a health-related quality-of-life tool for dementia, the DEMQOL. All outcomes were measured at the participant level by researchers blind to group assignment.Randomisation Sites were stratified by size and level of care then assigned to group using a random number generator.Results Seventeen nursing homes (189 residents) received the intervention and 18 homes (209 residents) received usual care. Groups did not differ significantly over time on the primary outcome of depression, or on behavioural disturbances other than agitation, social engagement and quality of life. The secondary outcome of agitation was significantly reduced in the intervention group compared with controls over 26 weeks (time by group interaction adjusted for covariates: p=0.011). The mean difference in change from baseline to 26 weeks in Blom-transformed agitation scores after adjustment for covariates was 0.17 (95% CI 0.004 to 0.34, p=0.045).Conclusions Humour therapy did not significantly reduce depression but significantly reduced agitation.Trial registration Australian New Zealand Clinical Trials Registry -ACTRN12611000462987.},
-  author = {Low, Lee-Fay and Brodaty, Henry and Goodenough, Belinda and Spitzer, Peter and Bell, Jean-Paul and Fleming, Richard and Casey, Anne-Nicole and Liu, Zhixin and Chenoweth, Lynn},
-  doi = {10.1136/bmjopen-2012-002072},
-  eprint = {http://bmjopen.bmj.com/content/3/1/e002072.full.pdf+html},
-  journal = {BMJ Open},
-  number = 1,
-  title = {The Sydney Multisite Intervention of LaughterBosses and ElderClowns (SMILE) study: cluster randomised trial of humour therapy in nursing homes},
-  url = {http://bmjopen.bmj.com/content/3/1/e002072.abstract},
-  volume = 3,
-  year = 2013
+@article {Lowe002072,
+	author = {Low, Lee-Fay and Brodaty, Henry and Goodenough, Belinda and Spitzer, Peter and Bell, Jean-Paul and Fleming, Richard and Casey, Anne-Nicole and Liu, Zhixin and Chenoweth, Lynn},
+	title = {The Sydney Multisite Intervention of LaughterBosses and ElderClowns (SMILE) study: cluster randomised trial of humour therapy in nursing homes},
+	volume = {3},
+	number = {1},
+	year = {2013},
+	doi = {10.1136/bmjopen-2012-002072},
+	publisher = {British Medical Journal Publishing Group},
+	abstract = {Objectives To determine whether humour therapy reduces depression (primary outcome), agitation and behavioural disturbances and improves social engagement and quality-of-life in nursing home residents. Design The Sydney Multisite Intervention of LaughterBosses and ElderClowns study was a single-blind cluster randomised controlled trial of humour therapy. Setting 35 Sydney nursing homes. Participants All eligible residents within geographically defined areas within each nursing home were invited to participate. Intervention Professional {\textquoteleft}ElderClowns{\textquoteright} provided 9{\textendash}12 weekly humour therapy sessions, augmented by resident engagement by trained staff {\textquoteleft}LaughterBosses{\textquoteright}. Controls received usual care. Measurements Depression scores on the Cornell Scale for Depression in Dementia, agitation scores on the Cohen-Mansfield Agitation Inventory, behavioural disturbance scores on the Neuropsychiatric Inventory, social engagement scores on the withdrawal subscale of Multidimensional Observation Scale for Elderly Subjects, and self-rated and proxy-rated quality-of-life scores on a health-related quality-of-life tool for dementia, the DEMQOL. All outcomes were measured at the participant level by researchers blind to group assignment. Randomisation Sites were stratified by size and level of care then assigned to group using a random number generator. Results Seventeen nursing homes (189 residents) received the intervention and 18 homes (209 residents) received usual care. Groups did not differ significantly over time on the primary outcome of depression, or on behavioural disturbances other than agitation, social engagement and quality of life. The secondary outcome of agitation was significantly reduced in the intervention group compared with controls over 26 weeks (time by group interaction adjusted for covariates: p=0.011). The mean difference in change from baseline to 26 weeks in Blom-transformed agitation scores after adjustment for covariates was 0.17 (95\% CI 0.004 to 0.34, p=0.045). Conclusions Humour therapy did not significantly reduce depression but significantly reduced agitation. Trial registration Australian New Zealand Clinical Trials Registry -ACTRN12611000462987.},
+	issn = {2044-6055},
+	URL = {http://bmjopen.bmj.com/content/3/1/e002072},
+	eprint = {http://bmjopen.bmj.com/content/3/1/e002072.full.pdf},
+	journal = {BMJ Open}
 }
