updated GenomeBiologyScraper and test files

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/GenomeBiologyScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/GenomeBiologyScraperUnitURLTest1.bib
@@ -1,14 +1,15 @@
-@Article{25315513,
-AUTHOR = {Hall, Neil},
-TITLE = {The Kardashian index: a measure of discrepant social media profile for scientists},
-JOURNAL = {Genome Biology},
-VOLUME = {15},
-YEAR = {2014},
-NUMBER = {7},
-PAGES = {424},
-URL = {http://genomebiology.com/2014/15/7/424},
-DOI = {10.1186/s13059-014-0424-0},
-PubMedID = {25315513},
-ISSN = {1465-6906},
-ABSTRACT = {In the era of social media there are now many different ways that a scientist can build their public profile; the publication of high-quality scientific papers being just one. While social media is a valuable tool for outreach and the sharing of ideas, there is a danger that this form of communication is gaining too high a value and that we are losing sight of key metrics of scientific value, such as citation indices. To help quantify this, I propose the 'Kardashian Index', a measure of discrepancy between a scientist's social media profile and publication record based on the direct comparison of numbers of citations and Twitter followers.},
+@Article{Hall2014,
+author="Hall, Neil",
+title="The Kardashian index: a measure of discrepant social media profile for scientists",
+journal="Genome Biology",
+year="2014",
+month="Jul",
+day="30",
+volume="15",
+number="7",
+pages="424",
+abstract="In the era of social media there are now many different ways that a scientist can build their public profile; the publication of high-quality scientific papers being just one. While social media is a valuable tool for outreach and the sharing of ideas, there is a danger that this form of communication is gaining too high a value and that we are losing sight of key metrics of scientific value, such as citation indices. To help quantify this, I propose the `Kardashian Index', a measure of discrepancy between a scientist's social media profile and publication record based on the direct comparison of numbers of citations and Twitter followers.",
+issn="1474-760X",
+doi="10.1186/s13059-014-0424-0",
+url="http://dx.doi.org/10.1186/s13059-014-0424-0"
 }
