fixed ScienceDirect scraper and adopted test data

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/sciencedirect/ScienceDirectScraperUnitURLTest4.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/sciencedirect/ScienceDirectScraperUnitURLTest4.bib
@@ -5,12 +5,12 @@ volume = "39",
 number = "3",
 pages = "303 - 310",
 year = "2002",
-note = "",
 issn = "1389-1286",
-doi = "http://dx.doi.org/10.1016/S1389-1286(02)00211-6",
+doi = "https://doi.org/10.1016/S1389-1286(02)00211-6",
 url = "http://www.sciencedirect.com/science/article/pii/S1389128602002116",
 author = "Dell Zhang and Yisheng Dong",
 keywords = "Web information retrieval",
 keywords = "Multimedia retrieval",
-keywords = "Data mining"
+keywords = "Data mining",
+abstract = "Abstract Web usage mining can be very useful to search engines. This paper proposes a novel effective approach to exploit the relationships among users, queries and resources based on the search engine's log. How this method can be applied is illustrated by a Chinese image search engine."
 }
