--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/sciencedirect/ScienceDirectScraperUnitURLTest6.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/sciencedirect/ScienceDirectScraperUnitURLTest6.bib
@@ -5,10 +5,9 @@ volume = "8",
 number = "2",
 pages = "95 - 96",
 year = "2010",
-note = "",
+note = "Bridging the Gap—Data Mining and Social Network Analysis for Integrating Semantic Web and Web 2.0 The Future of Knowledge Dissemination: The Elsevier Grand Challenge for the Life Sciences",
 issn = "1570-8268",
-doi = "http://dx.doi.org/10.1016/j.websem.2010.04.008",
+doi = "https://doi.org/10.1016/j.websem.2010.04.008",
 url = "http://www.sciencedirect.com/science/article/pii/S1570826810000326",
-author = "Bettina Berendt and Andreas Hotho and Gerd Stumme",
-
+author = "Bettina Berendt and Andreas Hotho and Gerd Stumme"
 }
