--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/sciencedirect/ScienceDirectScraperUnitURLTest7.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/sciencedirect/ScienceDirectScraperUnitURLTest7.bib
@@ -5,13 +5,14 @@ volume = "376",
 number = "3",
 pages = "139 - 163",
 year = "2007",
-note = "",
+note = "Fundamental Aspects of Software Engineering",
 issn = "0304-3975",
-doi = "http://dx.doi.org/10.1016/j.tcs.2007.02.001",
+doi = "https://doi.org/10.1016/j.tcs.2007.02.001",
 url = "http://www.sciencedirect.com/science/article/pii/S0304397507000631",
 author = "Juan de Lara and Roswitha Bardohl and Hartmut Ehrig and Karsten Ehrig and Ulrike Prange and Gabriele Taentzer",
 keywords = "Graph transformation",
 keywords = "Meta-modelling",
 keywords = "Double pushout approach",
-keywords = "Visual languages"
+keywords = "Visual languages",
+abstract = "Abstract The aim of this paper is to integrate typed attributed graph transformation with node type inheritance. Borrowing concepts from object oriented systems, the main idea is to enrich the attributed type graph with an inheritance relation and a set of abstract nodes. In this way, a node type inherits the attributes and edges of all its ancestors. Based on these concepts, it is possible to define abstract productions, containing abstract nodes. These productions are equivalent to a number of concrete productions, resulting from the substitution of the abstract node types by the node types in their inheritance clan. Therefore, productions become more compact and suitable for their use in combination with meta-modelling. The main results of this paper show that attributed graph transformation with node type inheritance is fully compatible with the existing concept of typed attributed graph transformation."
 }
