--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/sciencedirect/ScienceDirectScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/sciencedirect/ScienceDirectScraperUnitURLTest2.bib
@@ -1,13 +1,13 @@
 @article{STUMME2006124,
-title = "Semantic Web Mining",
+title = "Semantic Web Mining: State of the art and future directions",
 journal = "Web Semantics: Science, Services and Agents on the World Wide Web",
 volume = "4",
 number = "2",
 pages = "124 - 143",
 year = "2006",
-note = "",
+note = "Semantic Grid --The Convergence of Technologies",
 issn = "1570-8268",
-doi = "http://dx.doi.org/10.1016/j.websem.2006.02.001",
+doi = "https://doi.org/10.1016/j.websem.2006.02.001",
 url = "http://www.sciencedirect.com/science/article/pii/S1570826806000084",
 author = "Gerd Stumme and Andreas Hotho and Bettina Berendt",
 keywords = "Web Mining",
@@ -16,5 +16,6 @@ keywords = "Ontologies",
 keywords = "Knowledge discovery",
 keywords = "Knowledge engineering",
 keywords = "Artificial intelligence",
-keywords = "World Wide Web"
+keywords = "World Wide Web",
+abstract = "Abstract Semantic Web Mining aims at combining the two fast-developing research areas Semantic Web and Web Mining. This survey analyzes the convergence of trends from both areas: More and more researchers are working on improving the results of Web Mining by exploiting semantic structures in the Web, and they make use of Web Mining techniques for building the Semantic Web. Last but not least, these techniques can be used for mining the Semantic Web itself. The Semantic Web is the second-generation WWW, enriched by machine-processable information which supports the user in his tasks. Given the enormous size even of today’s Web, it is impossible to manually enrich all of these resources. Therefore, automated schemes for learning the relevant information are increasingly being used. Web Mining aims at discovering insights about the meaning of Web resources and their usage. Given the primarily syntactical nature of the data being mined, the discovery of meaning is impossible based on these data only. Therefore, formalizations of the semantics of Web sites and navigation behavior are becoming more and more common. Furthermore, mining the Semantic Web itself is another upcoming application. We argue that the two areas Web Mining and Semantic Web need each other to fulfill their goals, but that the full potential of this convergence is not yet realized. This paper gives an overview of where the two areas meet today, and sketches ways of how a closer integration could be profitable."
 }
