--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/SSRNScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/SSRNScraperUnitURLTest1.bib
@@ -7,6 +7,6 @@
  publisher={SSRN},
  doi={10.2139/ssrn.519044},
  keywords={Stock price clustering, Option expiration, Hedging, Manipulation},
- location={http://ssrn.com/paper=519044},
+ location={https://ssrn.com/paper=519044},
  language={English} ,abstract = {This paper presents striking evidence that option trading changes the prices of underlying stocks.  In particular, we show that on expiration dates the closing prices of stocks with listed options cluster at option strike prices.  On each expiration date, the returns of optionable stocks are altered by an average of at least 16.5 basis points, which translates into aggregate market capitalization shifts on the order of $9 billion.  We provide evidence that hedge re-balancing by option market-makers and stock price manipulation by firm proprietary traders contribute to the clustering.}
 }
