--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/SSRNScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/SSRNScraperUnitURLTest2.bib
@@ -7,6 +7,6 @@
  publisher={SSRN},
  doi={10.2139/ssrn.900005},
  keywords={Life-Cycle Planning under Uncertainty, Risky Labor Income, Target-Date Retirement Funds, Pension Design},
- location={http://ssrn.com/paper=900005},
+ location={https://ssrn.com/paper=900005},
  language={English} ,abstract = {Many participants in self-directed retirement plans (401k, IRA, etc.) do not know enough about investing to choose rationally among alternatives. Others may know enough, but find it unpleasant or too time-consuming.   Target-date funds (TDFs), also known as life-cycle funds, are being offered as a simple solution to their dilemma.  A TDF is a "fund of funds" diversified across stocks, bonds, and cash with the feature that the proportion invested in stocks is automatically reduced as time passes.  Empirical evidence suggests that a simple TDF strategy would be an improvement over the choices currently made by many uninformed plan participants.  This paper explores one way to achieve an even greater improvement.  Using a compact continuous-time optimization model, we characterize a person for whom a TDF strategy would be optimal: a "natural TDF holder." We then show that the TDF strategy may be far from optimal for people who  although of the same age  differ from the natural TDF holder in their risk aversion or exposure to human-capital risk.  To bring such plan participants much closer to their optimal strategy it is enough to add a second simple investment alternative  a safe fund matched to their time horizon.  Participants with the same time horizon could then choose (or be advised to choose) either the TDF or the safe target-date fund depending on their risk aversion and human-capital risk. We find that people who are very risk averse and who have a high exposure to market risk through their labor income would experience a substantial gain in welfare from being offered a safe target-date fund rather than a risky one.  Recent empirical research suggests that human-capital betas change over one's working career.  They are typically quite high during the early years when human capital represents the largest part of total wealth for most people, and they decline with age.  To reflect gradual changes in human capital risk over the life-cycle from predominantly "stock-like" to mostly "bond-like," TDFs should switch from a "linear" strategy to a "hump-shaped" strategy with respect to age.}
 }
