--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/degruyter/DeGruyterScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/degruyter/DeGruyterScraperUnitURLTest2.bib
@@ -5,7 +5,7 @@ doi = {10.1515/itit-2014-1048},
 issn = {21967032},
 pages = {207--},
 title = {Tweets vs. Mendeley readers: How do these two social media metrics differ?},
-url = {http://www.degruyter.com/view/j/itit.2014.56.issue-5/itit-2014-1048/itit-2014-1048.xml},
+url = {https://www.degruyter.com/view/j/itit.2014.56.issue-5/itit-2014-1048/itit-2014-1048.xml},
 volume = {56},
 year = {2014}
 }
